--- a/style.css
+++ b/style.css
@@ -34,12 +34,17 @@ p {
 }
 
 button {
-    margin-left: 156px;
     font-size: 15px;
     border-radius: 5px;
     margin-top: 20px;
     cursor: pointer;
+    padding: 5px 70px;
     
+}
+
+h3 {
+    margin-bottom: 10px;
+    text-align: center;
 }
 
 button:hover {
